tests/neg/preview-non-viral/usage_2.scala
def usePreviewFeatureTransitively = scala.usePreviewFeature
def usePreviewFeatureDirectly = scala.previewFeature // error
